@@ -18,8 +18,8 @@ class Bar_line
 public:
   static bool has_interface (Grob *);
 
-  static Stencil compound_barline (Grob *, String, Real height);
-  static Stencil simple_barline (Grob *, Real wid, Real height);
+  static Stencil compound_barline (Grob *, String, Real height, bool rounded);
+  static Stencil simple_barline (Grob *, Real wid, Real height, bool rounded);
   DECLARE_SCHEME_CALLBACK (get_staff_bar_size, (SCM));
   DECLARE_SCHEME_CALLBACK (print, (SCM));
   DECLARE_SCHEME_CALLBACK (before_line_breaking, (SCM));
