@@ -1,3 +1,10 @@
+2005-03-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scm/page-layout.scm (default-page-make-stencil): only add header
+	if existing and not empty. Fixes spurious programming error.
+
+	* lily/span-bar.cc (print): don't make rounded edges for spanbars.
+
 2005-03-31  Erlend Aasland  <erlenda@gmail.com>
 
 	* scm/output-tex.scm: implement {re,}setcolor
